--- a/study-ractive/index.html
+++ b/study-ractive/index.html
@@ -1,1 +1,75 @@
-<h1>Study RactiveJs</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Starter Template for Bootstrap</title>
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+<div class="container">
+	<h1>Bootstrap starter template</h1>
+
+	<form>
+		<div class="form-group">
+			<div class="input-group input-group-lg">
+				<div class="input-group-btn">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-check"></span>
+					</button>
+				</div>
+				<input type="text" class="form-control" placeholder="Search for...">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="submit">
+						<span class="glyphicon glyphicon-plus"></span>
+					</button>
+				</span>
+			</div>
+		</div>
+	</form>
+
+	<ul class="list-group">
+
+		<li class="list-group-item">
+			<button type="button" class="btn btn-default">
+				<span class="glyphicon glyphicon-check"></span>
+			</button>
+			Cras justo odio
+			<div class="btn-group pull-right">
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-edit"></span>
+				</button>
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-remove"></span>
+				</button>
+			</div>
+			<div class="clearfix"></div>
+		</li>
+
+		<li class="list-group-item">
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Search for...">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="submit">
+						<span class="glyphicon glyphicon-ok"></span>
+					</button>
+				</span>
+			</div>
+		</li>
+
+		<li class="list-group-item">Morbi leo risus</li>
+		<li class="list-group-item">Porta ac consectetur ac</li>
+		<li class="list-group-item">Vestibulum at eros</li>
+	</ul>
+
+</div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+</body>
+</html>
