--- a/backbone-users/index.html
+++ b/backbone-users/index.html
@@ -12,53 +12,59 @@
 
 <body>
 
-<div class="container" id="app">
+<div class="container" id="app"></div>
 
-    <h1>Page title</h1>
+<script id="users-template" type="text/template">
+    <h1>List users</h1>
 
     <table class="table table-bordered">
         <thead>
-            <tr>
-                <th><input type="checkbox"/></th>
-                <th>Name</th>
-                <th>Phone</th>
-                <th>Action</th>
-            </tr>
+        <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Action</th>
+        </tr>
         </thead>
         <tbody id="users"></tbody>
     </table>
 
-    <script id="user-template" type="text/template">
-        <td scope="row"><input type="checkbox"/></td>
-        <td><%= name %></td>
-        <td><%= phone %></td>
-        <td>
-            <a href="#" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
-            <a href="#" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-remove"></i></a>
-        </td>
-    </script>
+    <a href="#add" class="btn btn-default">Add new user</a>
+</script>
+
+<script id="user-template" type="text/template">
+    <td><%= user.get('name') %></td>
+    <td><%= user.get('phone') %></td>
+    <td>
+        <a href="#edit/<%= user.id %>" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
+        <a href="#delete/<%= user.id %>" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-remove"></i></a>
+    </td>
+</script>
+
+<script id="user-form-template" type="text/template">
+    <h1><%= user.isNew() ? 'Add user' : 'Edit user' %></h1>
 
     <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Name">
+                <input type="text" name="name" value="<%= user.get('name') %>" placeholder="Name" class="form-control">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Phone</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Phone">
+                <input type="text" name="phone" value="<%= user.get('phone') %>" placeholder="Phone" class="form-control">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-success">Submit</button>
+                <a href="#list" class="btn btn-default">List users</a>
             </div>
         </div>
+        <div data-param="error" class="alert alert-danger" style="display: none;"></div>
     </form>
-
-</div>
+</script>
 
 <script src="../assets/jquery/jquery.min.js"></script>
 <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
