--- a/backbone-users/index.html
+++ b/backbone-users/index.html
@@ -36,7 +36,7 @@
     <td><%= user.get('phone') %></td>
     <td>
         <a href="#edit/<%= user.id %>" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
-        <a href="#delete/<%= user.id %>" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-remove"></i></a>
+        <a href="#" class="btn btn-default btn-sm act-delete" data-user-id="<%= user.id %>"><i class="glyphicon glyphicon-remove"></i></a>
     </td>
 </script>
 
