--- a/d3-chart/grouped-bar/index.html
+++ b/d3-chart/grouped-bar/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css.css"/>
 </head>
 <body>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="../../assets/d3js/d3.v3.min.js"></script>
     <script src="js.js"></script>
 </body>
 </html>
