--- a/d3-chart/grouped-bar/index.html
+++ b/d3-chart/grouped-bar/index.html
@@ -7,6 +7,6 @@
 <body>
     <script src="../../assets/d3js/d3.v3.min.js"></script>
     <script src="../../assets/underscore-min.js"></script>
-    <script src="js.js"></script>
+    <script src="chart.js"></script>
 </body>
 </html>
