--- a/d3-chart/grouped-bar/index.html
+++ b/d3-chart/grouped-bar/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="css.css"/>
 </head>
 <body>
+    <div id="chart">
+        <div id="chart-bars"></div>
+    </div>
+
+    <script src="../../assets/jquery/jquery.min.js"></script>
     <script src="../../assets/d3js/d3.v3.min.js"></script>
     <script src="../../assets/underscore-min.js"></script>
     <script src="chart.js"></script>
