--- a/d3-chart/grouped-bar/index.html
+++ b/d3-chart/grouped-bar/index.html
@@ -5,9 +5,17 @@
     <link rel="stylesheet" href="css.css"/>
 </head>
 <body>
-    <div id="chart">
-        <div id="chart-bars"></div>
-    </div>
+    <table class="chart-bar">
+        <tr>
+            <td><div id="chart-bar-groups-left"></div></td>
+            <td>
+                <div id="chart-bar-groups-top"></div>
+                <div id="chart"></div>
+                <div id="chart-bar-groups-bottom"></div>
+            </td>
+            <td><div id="chart-bar-groups-right"></div></td>
+        </tr>
+    </table>
 
     <script src="../../assets/jquery/jquery.min.js"></script>
     <script src="../../assets/d3js/d3.v3.min.js"></script>
