--- a/d3-chart/grouped-bar/index.html
+++ b/d3-chart/grouped-bar/index.html
@@ -22,6 +22,6 @@
     <script src="../../assets/jquery/jquery.min.js"></script>
     <script src="../../assets/d3js/d3.v3.min.js"></script>
     <script src="../../assets/underscore-min.js"></script>
-    <script src="chart-bar.js"></script>
+    <script src="chart-bar-horizontal.js"></script>
 </body>
 </html>
